# svglab

./: .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  codecov.yml  data.csv  flake.nix  good_size.csv  justfile  mkdocs.yml  perf.csv  perf_interpret.ipynb  perf_measure.ipynb  pyproject.toml  raw.csv  sampled.csv  vermin.ini
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: check.yml  docs.yml  publish-pypi.yml
docs/: api_reference.md  attribute-groups.md  attributes.md  elements.md  index.md  overview.md
docs/api-reference/: attribute-groups.md  attributes.md  elements.md  traits.md
docs/css/: mathjax.css
docs/getting-started/: installation.md  quickstart.md
docs/js/: keybinds.js  readthedocs.js
docs/overrides/: home.html
docs/user-guide/: attributes.md  elements.md  graphics.md  parsing.md  path-data.md  serialization.md  traits.md  transforms.md
svglab/: __init__.py  __main__.py  attrs.py  bbox.py  constants.py  elements.py  entities.py  errors.py  graphics.py  io.py  main.py  mixins.py  models.py  parse.py  point.py  protocols.py  render.py  serialize.py  types.py  units.py  utils.py  utiltypes.py  xml.py
svglab/attrparse/: __init__.py  angle.py  color.py  d.py  iri.py  length.py  names.py  parse.py  path_data.py  point.py  points.py  transform.py  utils.py
svglab/attrparse/grammars/: angle.lark  d.lark  length.lark  path_data.lark  points.lark  transform.lark
svglab/attrs/: __init__.py  angle.py  attrdefs.py  attrgroups.py  color.py  common.py  d.py  defs.py  groups.py  length.py  name.py  names.py  point.py  points.py  presentation.py  regular.py  transform.py  typedefs.py  types.py  utils.py
svglab/attrs/grammars/: length.lark  point.lark  transform.lark
svglab/elements/: __init__.py  attrdefs.py  attrtypes.py  common.py  element.py  elements.py  names.py  root.py  svg.py  tag.py  tags.py  text_element.py  text_elements.py  traits.py  transforms.py
svglab/io/: __init__.py  read.py  write.py
svglab/utils/: bsutils.py  iterutils.py  mathutils.py  miscutils.py
tests/: __init__.py  conftest.py  test_main.py
tests/regression/: test_render_size_aspect_ratio.py  test_set_viewbox_translate.py
